craeate mixins file and correct vsrs.scss

--- a/prepros.config
+++ b/prepros.config
@@ -954,6 +954,13 @@
         }
       },
       {
+        "file": "#src/scss/mixins.scss",
+        "config": {
+          "customOutput": "#src\\scss\\mixins.scss",
+          "autoCompile": false
+        }
+      },
+      {
         "file": "#src/scss/null.scss",
         "config": {
           "customOutput": "#src\\scss\\null.scss"
